Refactor SCSS styles for consistency and readability
This commit refactors several SCSS files to improve consistency and readability.

The changes include:

- Adding whitespace for improved readability in selector lists (e.g., `*, *:before, *:after`).
- Standardizing color values to lowercase (e.g., `#13B9FD` to `#13b9fd`).
- Replacing parentheses-enclosed media queries with space-enclosed media queries (e.g. `@media(max-width: 840px)` to `@media (max-width: 840px)`).
- Correcting minor typographical errors (e.g., `opacity: .5` to `opacity: 0.5`, `box-shadow: 0 5px 10px rgba(0, 0, 0, .2)` to `box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2)`).
- Adding or adjusting comments for clarity.

These changes enhance the maintainability and visual appeal of the generated documentation.

--- a/web/styles/_gfm.scss
+++ b/web/styles/_gfm.scss
@@ -29,7 +29,7 @@
     color: var(--alert-title-color, inherit);
 
     &::before {
-      font: 22px / 1 'Material Symbols Outlined';
+      font: 22px / 1 "Material Symbols Outlined";
       user-select: none;
     }
   }
@@ -38,7 +38,7 @@
     --alert-title-color: var(--alert-info-fgColor);
 
     .markdown-alert-title::before {
-      content: 'info';
+      content: "info";
     }
   }
 
@@ -46,7 +46,7 @@
     --alert-title-color: var(--alert-tip-fgColor);
 
     .markdown-alert-title::before {
-      content: 'lightbulb';
+      content: "lightbulb";
     }
   }
 
@@ -54,7 +54,7 @@
     --alert-title-color: var(--alert-important-fgColor);
 
     .markdown-alert-title::before {
-      content: 'feedback';
+      content: "feedback";
     }
   }
 
@@ -62,7 +62,7 @@
     --alert-title-color: var(--alert-warning-fgColor);
 
     .markdown-alert-title::before {
-      content: 'warning';
+      content: "warning";
     }
   }
 
@@ -70,7 +70,7 @@
     --alert-title-color: var(--alert-error-fgColor);
 
     .markdown-alert-title::before {
-      content: 'report';
+      content: "report";
     }
   }
 }
