--- a/web/styles/dartdoc/_misc.scss
+++ b/web/styles/dartdoc/_misc.scss
@@ -35,7 +35,8 @@
   }
 }
 
-li .material-symbols-outlined, dt .material-symbols-outlined {
+li .material-symbols-outlined,
+dt .material-symbols-outlined {
   font-size: 1em;
   vertical-align: text-bottom;
 }
