--- a/web/styles/_content.scss
+++ b/web/styles/_content.scss
@@ -58,7 +58,7 @@ h1 {
   margin-top: 0;
   margin-bottom: 0.67em;
 
-  @media(max-width: 840px) {
+  @media (max-width: 840px) {
     font-size: 24px;
   }
 }
@@ -81,7 +81,7 @@ a {
 }
 
 a:hover {
-  color: #13B9FD;
+  color: #13b9fd;
 }
 
 .fixed {
@@ -91,11 +91,11 @@ a:hover {
 header a,
 header p,
 header li {
-  color: #0175C2;
+  color: #0175c2;
 }
 
 header a:hover {
-  color: #0175C2;
+  color: #0175c2;
 }
 
 header h1 .kind {
@@ -117,7 +117,9 @@ dd {
   margin-left: 0;
 }
 
-dd.callable, dd.constant, dd.property {
+dd.callable,
+dd.constant,
+dd.property {
   margin-bottom: 24px;
 }
 
