--- a/web/styles/_print.scss
+++ b/web/styles/_print.scss
@@ -3,7 +3,8 @@
 // BSD-style license that can be found in the LICENSE file.
 
 @media print {
-  .subnav, .sidebar {
+  .subnav,
+  .sidebar {
     display: none;
   }
 
