--- a/web/styles/_theme.scss
+++ b/web/styles/_theme.scss
@@ -23,7 +23,7 @@
   /*header text color*/
   --main-h-text: black;
   /* hyperlinks*/
-  --main-hyperlinks-color: #0175C2;
+  --main-hyperlinks-color: #0175c2;
 
   --main-inset-bgColor: #f5f5f7;
   --main-inset-borderColor: #dadce0;
@@ -60,9 +60,9 @@
 
 .dark-theme {
   /*background-color body, listdropdown*/
-  --main-bg-color: #10161E;
+  --main-bg-color: #10161e;
   /*header id-tittle*/
-  --main-header-color: #1C2834;
+  --main-header-color: #1c2834;
   /*package-name*/
   --main-sidebar-color: #fff;
   /*section-title and section subtitle, desc markdown(body, dd, h3), header a*/
@@ -72,19 +72,19 @@
   /* footer */
   --main-footer-background: #27323a;
   /* hyperlinks*/
-  --main-hyperlinks-color: #00D2FA;
+  --main-hyperlinks-color: #00d2fa;
 
   --main-inset-bgColor: #242b32;
   --main-inset-borderColor: #676f7e;
 
   /*code snippets*/
-  --main-code-bg: #10161E;
+  --main-code-bg: #10161e;
   --main-keyword-color: white;
-  --main-tag-color: #00D2FA;
-  --main-section-color: #FF2D64;
-  --main-comment-color: #909CC3;
-  --main-var-color: #55A09B;
-  --main-string-color: #FF2D64;
+  --main-tag-color: #00d2fa;
+  --main-section-color: #ff2d64;
+  --main-comment-color: #909cc3;
+  --main-var-color: #55a09b;
+  --main-string-color: #ff2d64;
 
   --main-icon-color: white;
 
